# stoc-opt_scheduler_comparison

./: .gitignore  project_specification.md  pyproject.toml
configs/: experiment_config.yaml
docs/: project_specification.md  visualization_docs.md
src/: data.py
src/models/: logistic_regression.py  mlp.py
src/stoc_opt_scheduler_comparison/: __init__.py  config.py  utils.py
src/stoc_opt_scheduler_comparison/data_load/: __init__.py  loaders.py  transforms.py
src/stoc_opt_scheduler_comparison/evaluation/: __init__.py  convergence.py  metrics.py
src/stoc_opt_scheduler_comparison/models/: __init__.py  architectures.py
src/stoc_opt_scheduler_comparison/tracking/: __init__.py  mlflow_manager.py
src/stoc_opt_scheduler_comparison/training/: __init__.py  engine.py  optimizers.py  schedulers.py
src/stoc_opt_scheduler_comparison/visualization/: __init__.py  plots.py
src/training/: train.py
tests/: test_data.py
