[project]
name = "stoc_opt_scheduler_comparison"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.11.0",
    "torchvision",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "mlflow",
    "notebook",
    "ipykernel",
    "pyyaml",
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.egg_info]
egg_base = "build"

[tool.uv.sources]
stoc-opt-scheduler-comparison = { path = ".", editable = true }